--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ div {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
+  text-transform: uppercase;
   padding: 0.7em 1.4em 0.7em 1.1em;
   color: white;
   background: #ad5389;
@@ -50,6 +51,7 @@ img{
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
+    text-transform: uppercase;
     padding: 0.7em 1.4em 0.7em 1.1em;
     color: white;
     background: #ad5389;
